Add ability to choose type of notification time
