# pkg/api/http/v1/scrapper/oas_json_gen.go
@@ -44,12 +44,19 @@ func (s *AddLinkRequest) encodeFields(e *jx.Encoder) {
 			e.ArrEnd()
 		}
 	}
+	{
+		if s.SendImmediately.Set {
+			e.FieldStart("send_immediately")
+			s.SendImmediately.Encode(e)
+		}
+	}
 }
 
-var jsonFieldsNameOfAddLinkRequest = [3]string{
+var jsonFieldsNameOfAddLinkRequest = [4]string{
 	0: "link",
 	1: "tags",
 	2: "filters",
+	3: "send_immediately",
 }
 
 // Decode decodes AddLinkRequest from json.
@@ -107,6 +114,16 @@ func (s *AddLinkRequest) Decode(d *jx.Decoder) error {
 				return nil
 			}(); err != nil {
 				return errors.Wrap(err, "decode field \"filters\"")
+			}
+		case "send_immediately":
+			if err := func() error {
+				s.SendImmediately.Reset()
+				if err := s.SendImmediately.Decode(d); err != nil {
+					return err
+				}
+				return nil
+			}(); err != nil {
+				return errors.Wrap(err, "decode field \"send_immediately\"")
 			}
 		default:
 			return d.Skip()
@@ -317,13 +334,20 @@ func (s *LinkResponse) encodeFields(e *jx.Encoder) {
 			e.ArrEnd()
 		}
 	}
+	{
+		if s.SendImmediately.Set {
+			e.FieldStart("send_immediately")
+			s.SendImmediately.Encode(e)
+		}
+	}
 }
 
-var jsonFieldsNameOfLinkResponse = [4]string{
+var jsonFieldsNameOfLinkResponse = [5]string{
 	0: "id",
 	1: "url",
 	2: "tags",
 	3: "filters",
+	4: "send_immediately",
 }
 
 // Decode decodes LinkResponse from json.
@@ -391,6 +415,16 @@ func (s *LinkResponse) Decode(d *jx.Decoder) error {
 				return nil
 			}(); err != nil {
 				return errors.Wrap(err, "decode field \"filters\"")
+			}
+		case "send_immediately":
+			if err := func() error {
+				s.SendImmediately.Reset()
+				if err := s.SendImmediately.Decode(d); err != nil {
+					return err
+				}
+				return nil
+			}(); err != nil {
+				return errors.Wrap(err, "decode field \"send_immediately\"")
 			}
 		default:
 			return d.Skip()
@@ -579,6 +613,41 @@ func (s *ListLinksResponse) MarshalJSON() ([]byte, error) {
 
 // UnmarshalJSON implements stdjson.Unmarshaler.
 func (s *ListLinksResponse) UnmarshalJSON(data []byte) error {
+	d := jx.DecodeBytes(data)
+	return s.Decode(d)
+}
+
+// Encode encodes bool as json.
+func (o OptBool) Encode(e *jx.Encoder) {
+	if !o.Set {
+		return
+	}
+	e.Bool(bool(o.Value))
+}
+
+// Decode decodes bool from json.
+func (o *OptBool) Decode(d *jx.Decoder) error {
+	if o == nil {
+		return errors.New("invalid: unable to decode OptBool to nil")
+	}
+	o.Set = true
+	v, err := d.Bool()
+	if err != nil {
+		return err
+	}
+	o.Value = bool(v)
+	return nil
+}
+
+// MarshalJSON implements stdjson.Marshaler.
+func (s OptBool) MarshalJSON() ([]byte, error) {
+	e := jx.Encoder{}
+	s.Encode(&e)
+	return e.Bytes(), nil
+}
+
+// UnmarshalJSON implements stdjson.Unmarshaler.
+func (s *OptBool) UnmarshalJSON(data []byte) error {
 	d := jx.DecodeBytes(data)
 	return s.Decode(d)
 }
